Long.valueOf() es más eficiente que new Long()